[project]
name = "graph-builder"
version = "0.1.0"
description = "Parse a Salesforce force-app into a typed metadata graph (nodes + edges)"
# Floor verified by running the full suite on 3.9/3.10/3.12 (stdlib-only runtime;
# all new-syntax annotations sit behind `from __future__ import annotations`).
# Keep it low on purpose: the on-prem agent runtime's Python version is unknown.
requires-python = ">=3.9"
dependencies = []

[project.scripts]
graph-builder = "graphbuilder.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
# OPTIONAL tree-sitter AST backend for the Apex extractor. Not a default
# dependency: without it the extractor falls back to its regex backend unchanged.
# The backend targets tree-sitter-language-pack's method-style node API; the major
# versions are capped so a binding-changing upgrade isn't pulled in silently. The
# runtime probe in extractors/apex.py is the backstop — it disables the AST backend
# (regex stays) on any node-API mismatch, so a bump here is safe to try.
ast = ["tree-sitter>=0.21,<1; python_version >= '3.10'", "tree-sitter-language-pack>=0.1,<2; python_version >= '3.10'"]
# OPTIONAL pure-python PDF backend for the docs source, guarded like `ast`:
# without it extractors/pdf.py is inert (handles() returns False, .pdf files
# are skipped silently) and docx/xlsx are unaffected. >=4 is a safe floor for
# the modern outline API (`outline` / `get_destination_page_number`); <7 caps
# the major so an API-changing upgrade isn't pulled in silently. pypdf is
# pure python and supports our whole 3.9+ floor — no python_version marker.
pdf = ["pypdf>=4,<7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["graphbuilder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
